# numinous-crunch-node

./: .dev.env  .env.example  .gitignore  .gitmodules  .local.env  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
crunch_node/: _logging.py  config.py  main.py  migrations.py
crunch_node/bt_compat/: __init__.py  numinous_client.py  path_validator.py  sandbox_manager.py  scoring.py
crunch_node/clients/: pg_client.py
crunch_node/prompts/: reasoning_eval.md
crunch_node/services/: scoring_service.py
crunch_node/tasks/: export_agent_run_logs_pg.py  export_agent_runs_pg.py  export_events_pg.py  export_predictions_pg.py  export_reasoning_pg.py  export_scores_pg.py  register_models.py  run_models.py  score_reasoning.py
crunch_node/workers/: gateway_worker.py  report_worker.py  scoring_worker.py
deployment/model-orchestrator-local/config/: docker-entrypoint.sh  models.dev.yml  orchestrator.dev.yml
deployment/postgres/init-scripts/: 01-setup-readonly-user.sh  02-create-tables.sql  03-add-brier-counts.sql  04-add-indexes.sql
gateway/: .env.example  Dockerfile  README.md  log_config.json  run.sh
tests/: conftest.py  test_bt_compat.py  test_config.py  test_numinous_client.py  test_pg_client.py  test_scoring.py  test_scoring_service.py
tests/debug/: test_score_reasoning_openai.py
